tests/snapshot/snapshots/snapshot__error_subcontract_nested_custom_diagnostics.ncl.snap
---
source: tests/snapshot/main.rs
assertion_line: 57
expression: snapshot
---
note: 
   ┌─ [INPUTS_PATH]/errors/subcontract_nested_custom_diagnostics.ncl:17:8
   │
17 │ null | ParentContract
   │        ^^^^^^^^^^^^^^ expected type

error: contract broken by a value: child\'s message
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ value
  │ ----- evaluated to this value
  │
  = child's note

note: from a parent contract violation: parent\'s message
 = parent's note


